# scala-bazel-monorepo

./: .bazelproject  .bazelrc  .gitignore  .scalafmt.conf  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-steward.yaml  maven_install.json
.github/workflows/: pr.yml  steward.yml
projects/commons/init-log/: README.md
projects/commons/init-log/src/main/: BUILD.bazel
projects/commons/init-log/src/main/scala/com/org/initlog/: Init.scala
projects/commons/init-log/src/test/: BUILD.bazel
projects/commons/init-log/src/test/scala/com/org/initlog/: InitTest.scala
projects/scripts/: BUILD.bazel  README.md
projects/scripts/src/main/scala/com/org/manual_init/: BUILD.bazel  ManualInit.scala  README.md
projects/service-1/: README.md
projects/service-1/src/it/: BUILD.bazel
projects/service-1/src/it/scala/com/org/service1/: Service1AppITTest.scala
projects/service-1/src/main/: BUILD.bazel
projects/service-1/src/main/scala/com/org/service1/: Service1App.scala
projects/service-1/src/test/: BUILD.bazel
projects/service-1/src/test/scala/com/org/service1/: Service1AppTest.scala
projects/service-2/: README.md
projects/service-2/src/main/: BUILD.bazel
projects/service-2/src/main/scala/com/org/service2/: Service2App.scala
projects/service-2/src/test/: BUILD.bazel
projects/service-2/src/test/scala/com/org/service2/: Service2AppTest.scala
tools/: oci.bzl  test.bzl
tools/build_rules/: prelude_bazel
