bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_scala")
git_override(
    module_name = "rules_scala",
    commit = "e2575a30a2eb3946731ac9a8e922c87fcd7dbee4",
    remote = "https://github.com/bazel-contrib/rules_scala",
)

register_toolchains("//:custom_scala_toolchain")

scala_version = "2.13.15"

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = scala_version)

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.overridden_artifact(
    name = "io_bazel_rules_scala_scala_library",
    artifact = "org.scala-lang:scala-library:%s" % scala_version,
    sha256 = "8e4dbc3becf70d59c787118f6ad06fab6790136a0699cd6412bc9da3d336944e",
)
scala_deps.overridden_artifact(
    name = "io_bazel_rules_scala_scala_compiler",
    artifact = "org.scala-lang:scala-compiler:%s" % scala_version,
    sha256 = "4c200cd193c082bec14a2a2dffe6a1ba5f8130b1b27c79ee54c936dfcafc8ed9",
)
scala_deps.overridden_artifact(
    name = "io_bazel_rules_scala_scala_reflect",
    artifact = "org.scala-lang:scala-reflect:%s" % scala_version,
    sha256 = "78d0cc350e1ee42d87c6e11cf5b0dc7bf0b70829c00aa38f27bfb019d439dc11",
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.scala()
scala_deps.scalatest()

bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.softwaremill.sttp.tapir:tapir-core_2.13:1.11.23",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.2.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "java_temurin",
    digest = "sha256:44a6b43221053ab8cdac5c634070a0731fb4aab9e629098ed72b026e76ccdab8",  # linux/amd64 manifest digest
    image = "eclipse-temurin",
    tag = "21.0.5_11-jre-noble",
)
use_repo(oci, "java_temurin")
