bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_scala", version = "7.2.4")

# VSCode/Cursor Metals extension needs explicit declaration
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_java", version = "9.6.1")

register_toolchains("//:custom_scala_toolchain")

scala_version = "3.3.7"

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = scala_version)

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.scala()
scala_deps.scalatest()

bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.softwaremill.sttp.tapir:tapir-core_3:1.13.16",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.3.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "java_temurin",
    digest = "sha256:e85b0225cfa456374434813f70f964c325449e97fc9a74590864491589e812d4",  # linux/amd64 manifest digest
    image = "eclipse-temurin",
    tag = "25.0.2_10-jre-noble",
)
use_repo(oci, "java_temurin")
