scala_binary(
    name = "service1",
    srcs = glob(["scala/**/*.scala"]),
    main_class = "com.org.service1.Service1App",
    resources = glob(["resources/*"]),
    visibility = [
        "//projects/service-1/src/test:__pkg__",  # limiting visibility only to tests
    ],
    deps = ["//projects/commons/init-log/src/main:init-log"],
)
