scala_library(
    name = "service1",
    srcs = glob(["scala/**/*.scala"]),
    main_class = "com.org.service1.Service1App",
    resources = glob(["resources/*"]),
    visibility = [
        "//projects/service-1/src/it:__pkg__",  # limiting visibility to unit tests
        "//projects/service-1/src/test:__pkg__",  # limiting visibility to it tests
    ],
    deps = [
        "//projects/commons/init-log/src/main:init-log",
        "@maven//:com_softwaremill_sttp_tapir_tapir_core_2_13",
    ],
)

docker_image(
    application_name = "service1",
    main_class = "com.org.service1.Service1App",
    deps = [":service1"],
)
