load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "service2",
    srcs = glob(["scala/**/*.scala"]),
    main_class = "com.org.service2.Service2App",
    resources = glob(["resources/*"]),
    visibility = [
        "//projects/service-2/src/test:__pkg__",  # limiting visibility only to tests
    ],
    deps = ["//projects/commons/init-log/src/main:init-log"],
)
