load("@io_bazel_rules_scala//scala:scala.bzl", "scala_test")

scala_test(
    name = "tests",
    srcs = glob(["scala/**/*.scala"]),
    resources = glob(["resources/**/*"]),
    deps = [
        "//projects/service-2/src/main:service2",
        "@maven//:org_scala_lang_modules_scala_xml_2_13",
    ],
)
