load("@io_bazel_rules_scala//scala:scala.bzl", "scala_test")

scala_test(
    name = "tests",
    srcs = glob(["scala/**/*.scala"]),
    resources = glob(["resources/**/*"]),
    deps = [
        "//projects/commons/init-log/src/main:init-log",
        "@maven//:org_scala_lang_modules_scala_xml_2_13",
    ],
)
